--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ol>
             <h3>Media</h3>
             <div>
-              <img src="img.png">
+              <img src="img.png" alt="funny diagram">
             </div>
             <div>
               <video width="320" height="240" controls>
@@ -102,7 +102,7 @@
             <label for="suggestions">Suggestions:</label>
             <textarea id="suggestions" name="suggestions"></textarea><br>
             <label for="topics">Topics :</label>
-            <select id="topics" name="topics" list="topicsData">
+            <select id="topics" name="topics">
                 <option value="dev">Development</option>
                 <option value="brainstorm">Brainstorm</option>
             </select>
